<resources>
    <string name="app_full_name" formatted="false">Battery Saver</string>
    <string name="app_launcher_name" formatted="false">Battery Saver</string>
    <string name="settings_activity_subtitle" formatted="false">Settings</string>
    <string name="help_activity_subtitle" formatted="false">Help</string>
    <string name="log_view_activity_subtitle" formatted="false">Logs</string>
    <string name="app_full_name_free" formatted="false">Battery Saver</string>
    <string name="battery_use_b" formatted="false">View Battery Use</string>
    <string name="upgrade_donate_b" formatted="false">Upgrade/Donate...</string>
    <string name="circle_widget" formatted="false">Perisai Circle</string>
    <string name="full_widget" formatted="false">Perisai Full</string>
    <string name="confirm_disable_hint" formatted="false">
    Hint: Disable this confirmation dialog in the settings...
  </string>
    <string name="yes" formatted="false">Yes</string>
    <string name="cancel" formatted="false">Cancel</string>
    <string name="confirm_close" formatted="false">Really Close?</string>
    <string name="confirm_close_hint" formatted="false">
    Battery Saver will be completely closed, and you won\'t see it
    in your status bar any more.  Any desktop widgets will be useless.\n

    \nIf you just want to leave the main window and keep the service
    running, press Cancel and then just press your device\'s BACK
    button to leave the main window.\n

    \nIf you want to hide the notification but keep widgets running,
    press Cancel and then run the Notification Wizard to hide the notification.
  </string>
    <string name="notification_wizard_title" formatted="false">
    How would you like to see the main Battery Saver notification?
  </string>
    <string name="notification_wizard_title_default" formatted="false">Default</string>
    <string name="notification_wizard_title_minimal" formatted="false">Minimal</string>
    <string name="notification_wizard_title_none" formatted="false">None</string>
    <string name="notification_wizard_summary_default" formatted="false">
    Battery percentage in status bar in addition to tray notification
  </string>
    <string name="notification_wizard_summary_minimal" formatted="false">
    Just notification in tray, nothing in status bar
  </string>
    <string name="requires_api_level_16" formatted="false">(Requires Android 4.1+)</string>
    <string name="notification_wizard_summary_none" formatted="false">
    For those who only use the desktop widgets and/or main screen
  </string>
    <string name="notifications_disabled" formatted="false">Notifications are disabled!</string>
    <string name="notifications_disabled_message" formatted="false">
    You have blocked all notifications for Battery Saver.  This will
    prevent Battery Saver from showing any notifications: the main
    notification and any alarms you have set will all be blocked.\n

    \nSince Battery Saver already allows you to turn the main
    notification on or off as well as temporarily disable any alarms
    you\'ve created, it is stongly recommended that you unblock the
    Battery Saver notifications.  While they are blocked, it will appear
    that Battery Saver is broken.\n

    \nPlease press OK to be taken to the system settings where you can
    unblock notifications for Battery Saver.
  </string>
    <string name="main_notif_chan_name" formatted="false">Main Notification</string>
    <string name="confirm_clear_logs" formatted="false">Really clear all logs?</string>
    <string name="configure_log_filter" formatted="false">Show which log items?</string>
    <string name="confirm_ten_percent_enable" formatted="false">Really enable 10% Mode?</string>
    <string name="confirm_ten_percent_disable" formatted="false">Really disable 10% Mode?</string>
    <string name="confirm_ten_percent_hint" formatted="false">
    Warning: Changing this setting (both enabling and disabling it)
    will reset your color settings.\n

    \nIf you have a Motorola Droid, Droid X, Droid 2, Defy,
    or Samsung Moment, you should turn
    this on when you first get the app, and then leave it alone.  All
    other devices, as far as I know, should always leave this off.
  </string>
    <string name="okay" formatted="false">Okay</string>
    <string name="none" formatted="false">None</string>
    <string name="tab_current_info" formatted="false">Current Info</string>
    <string name="tab_history" formatted="false">History</string>
    <string name="notification_until_charged" formatted="false">" until charged"</string>
    <string name="notification_until_drained" formatted="false">" left"</string>
    <string name="activity_until_charged" formatted="false">until charged</string>
    <string name="activity_until_drained" formatted="false">until drained</string>
    <string name="menu_settings" formatted="false">Settings</string>
    <string name="menu_close" formatted="false">Close</string>
    <string name="menu_help" formatted="false">Help</string>
    <string name="menu_rate_and_review" formatted="false">Rate &amp; Review</string>
    <string name="menu_notification_wizard" formatted="false">Notification Wizard</string>
    <string name="menu_clear" formatted="false">Clear</string>
    <string name="menu_reverse" formatted="false">Reverse Order</string>
    <string name="menu_log_filter" formatted="false">Filter</string>
    <string name="menu_export" formatted="false">Export CSV</string>
    <string name="menu_delete_alarm" formatted="false">Delete Alarm</string>
    <string name="menu_get_plugins" formatted="false">Get Plugins</string>
    <string name="percent_symbol" formatted="false">%</string>
    <string name="degree_symbol" formatted="false">°</string>
    <string name="fahrenheit" formatted="false">Fahrenheit</string>
    <string name="fahrenheit_symbol" formatted="false">F</string>
    <string name="celsius" formatted="false">Celsius</string>
    <string name="celsius_symbol" formatted="false">C</string>
    <string name="volt_symbol" formatted="false">V</string>
    <string name="fully_charged_in" formatted="false">Fully Charged in:</string>
    <string name="light_usage" formatted="false">Light Usage Left:</string>
    <string name="normal_usage" formatted="false">Normal Usage Left:</string>
    <string name="heavy_usage" formatted="false">Heavy Usage Left:</string>
    <string name="constant_usage" formatted="false">Constant Usage Left:</string>
    <string name="press_back_to_leave" formatted="false">Press BACK to leave.</string>
    <string name="press_menu_for_more" formatted="false">Press MENU for more items.</string>
    <string name="inaccessible_storage" formatted="false">SD Card is inaccessible.</string>
    <string name="inaccessible_w_reason" formatted="false">SD Card inaccessible: </string>
    <string name="read_only_storage" formatted="false">SD Card is read only.</string>
    <string name="no_storage_permission" formatted="false">Storage permission not granted.</string>
    <string name="file_written" formatted="false">File successfully written to root of SD card.</string>
    <string name="date" formatted="false">date</string>
    <string name="time" formatted="false">time</string>
    <string name="status" formatted="false">status</string>
    <string name="charge" formatted="false">charge_percentage</string>
    <string name="temperature" formatted="false">degrees_celsius</string>
    <string name="temperature_f" formatted="false">degrees_fahrenheit</string>
    <string name="voltage" formatted="false">volts</string>
    <string name="current" formatted="false">milliamperes</string>
    <string name="status_unplugged" formatted="false">Unplugged</string>
    <string name="status_unknown" formatted="false">Unknown</string>
    <string name="status_charging" formatted="false">Charging</string>
    <string name="status_discharging" formatted="false">Discharging</string>
    <string name="status_not_charging" formatted="false">Not Charging</string>
    <string name="status_fully_charged" formatted="false">Fully Charged</string>
    <string name="status_plugged_in" formatted="false">Plugged In</string>
    <string name="status_boot_completed" formatted="false">Boot Completed</string>
    <string name="health_unknown" formatted="false">Unknown</string>
    <string name="health_good" formatted="false">Good Health</string>
    <string name="health_overheat" formatted="false">Overheat</string>
    <string name="health_dead" formatted="false">Dead</string>
    <string name="health_overvoltage" formatted="false">Overvoltage</string>
    <string name="health_failure" formatted="false">Failure</string>
    <string name="health_cold" formatted="false">Cold</string>
    <string name="plugged_unplugged" formatted="false">Unplugged</string>
    <string name="plugged_ac" formatted="false">(AC)</string>
    <string name="plugged_usb" formatted="false">(USB)</string>
    <string name="plugged_unknown" formatted="false">(?)</string>
    <string name="plugged_wireless" formatted="false">(Wireless)</string>
    <string name="alarm_type_fully_charged" formatted="false">Fully charged</string>
    <string name="alarm_type_charge_drops" formatted="false">Charge drops below</string>
    <string name="alarm_type_charge_rises" formatted="false">Charge rises above</string>
    <string name="alarm_type_temperature_rises" formatted="false">Temperature rises above</string>
    <string name="alarm_type_health_failure" formatted="false">Health failure</string>
    <string name="alarm_type_entry_fully_charged" formatted="false">Becomes fully charged</string>
    <string name="alarm_type_entry_charge_drops" formatted="false">Charge drops below...</string>
    <string name="alarm_type_entry_charge_rises" formatted="false">Charge rises above...</string>
    <string name="alarm_type_entry_temperature_rises" formatted="false">Temperature rises above...</string>
    <string name="alarm_type_entry_health_failure" formatted="false">Health fails</string>
    <string name="alarm_fully_charged" formatted="false">Battery is now fully charged</string>
    <string name="alarm_charge_drops" formatted="false">"Battery charge is below "</string>
    <string name="alarm_charge_rises" formatted="false">"Battery charge is above "</string>
    <string name="alarm_temp_rises" formatted="false">"Battery temp. is above "</string>
    <string name="alarm_health_failure" formatted="false">"Battery health is: "</string>
    <string name="alarm_text" formatted="false">Select to edit alarms.</string>
    <string name="logs_empty" formatted="false">Logs Are Empty</string>
    <plurals name="n_log_items">
        <item quantity="one">%d Log Item</item>
        <item quantity="other">%d Log Items</item>
    </plurals>
    <string name="after_n_hours_unplugged" formatted="true">After %1.1f hours unplugged</string>
    <string name="after_n_hours_plugged_in" formatted="true">After %1.1f hours plugged in</string>
    <plurals name="n_hours_long">
        <item quantity="one">"%d hour, "</item>
        <item quantity="other">"%d hours, "</item>
    </plurals>
    <string name="basic_information">Basic Information</string>
    <string name="cpu">CPU</string>
    <string name="create_shortcuts">Create Shortcuts</string>
    <string name="external_storage">External Storage</string>
    <string name="float_window">Float Window</string>
    <string name="imei">IMEI</string>
    <string name="language_settings">Language Settings</string>
    <string name="notification">Notification</string>
    <string name="quick_setting">Quick Setting</string>
    <string name="ram">RAM</string>
    <string name="root_state">Root State</string>
    <string name="sd_card">SD Card</string>
    <string name="service_settings">Service Settings</string>
    <string name="system_os_version">System OS Version</string>
    <string name="user_experience_program">User Experience Program</string>
    <string name="b">1</string>
</resources>