<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/settings_background"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundTextView"
        android:paddingBottom="8.0dip"
        android:paddingLeft="16.0dip"
        android:paddingTop="8.0dip"
        android:text="@string/quick_setting"
        android:textColor="@color/colorTextSetting"
        android:textSize="18.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_shortcuts"
            android:textColor="@color/colorText"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_setting_next" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#33ffffff" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/float_window"
            android:textColor="@color/colorText"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_setting_next" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#33ffffff" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification"
            android:textColor="@color/colorText"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_setting_next" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundTextView"
        android:paddingBottom="8.0dip"
        android:paddingLeft="16.0dip"
        android:paddingTop="8.0dip"
        android:text="@string/language_settings"
        android:textColor="@color/colorTextSetting"
        android:textSize="18.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="English"
            android:textColor="@color/colorText"
            android:textSize="18.0sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_setting_next" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundTextView"
        android:paddingBottom="8.0dip"
        android:paddingLeft="16.0dip"
        android:paddingTop="8.0dip"
        android:text="@string/service_settings"
        android:textColor="@color/colorTextSetting"
        android:textSize="18.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_experience_program"
            android:textColor="@color/colorText"
            android:textSize="18.0sp" />

        <ToggleButton
            android:layout_width="45.0dip"
            android:layout_height="24.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_thumb"
            android:textOff="@null"
            android:textOn="@null" />
    </RelativeLayout>
</LinearLayout>
